--- a/style.css
+++ b/style.css
@@ -45,10 +45,13 @@ ul li {
   color: #637278;
   font: 80% sans-serif;
   text-decoration: none;
+  position: relative;
 }
 
 .image-number {
   color: #CDC9C6;
+  font: 80% sans-serif;
+  font-weight: bold;
 }
 
 .authors img {
@@ -63,7 +66,22 @@ ul li {
   list-style: none;
 }
 
+.image-caption::after {
+  content: "";
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 6px 6px 0 6px;
+  border-color: #afb2b5 transparent transparent transparent;
+  position: absolute;
+  top: -10px;
+  right: -0px;
+}
 
+.image-number::before {
+  content:"#" ;
+  color:  #CDC9C6;
+}
 
 /* triangle code:
 width: 0;
